force-app/main/default/objects/MUSW__Binder__c/MUSW__Binder__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Special activity type relating to many items having a common creation and due date. Items are tracked together. Examples: Citation of violations, submittal of documents, or milestone of applications.</description>
    <label>Binder</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Binder</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>