force-app/main/default/objects/MUSW__Binder__c/fields/MUSW__Complaint__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Complaint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complaint</label>
    <referenceTo>MUSW__Complaint__c</referenceTo>
    <relationshipLabel>Binders</relationshipLabel>
    <relationshipName>Binders</relationshipName>
    <type>Lookup</type>
</CustomField>