force-app/main/default/objects/MUSW__Binder__c/fields/MUSW__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Due_Date__c</fullName>
    <inlineHelpText>Date to complete or respond by...</inlineHelpText>
    <label>Next Due Date</label>
    <type>Date</type>
</CustomField>