force-app/main/default/objects/MUSW__Binder__c/fields/MUSW__Open_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Open_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Filing Date</label>
    <type>Date</type>
</CustomField>