force-app/main/default/objects/MUSW__Binder__c/fields/MUSW__Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Notice</fullName>
            </value>
            <value>
                <fullName>Citation</fullName>
                <default>true</default>
                <label>Citation</label>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Submittal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>